--- a/strings/command.yml
+++ b/strings/command.yml
@@ -78,7 +78,7 @@ GETLOG_COMMAND : ["get_log", "गेट_लोग"]
 GETVAR_COMMAND : ["get_var", "गेट_वर"]
 DELVAR_COMMAND : ["del_var", "देल_वर"]
 SETVAR_COMMAND : ["set_var", "सेट_वर"]
-USAGE_COMMAND : ["usage", "यूसेज"]
+USAGE_COMMAND : ["musikusage", "यूसेज"]
 
 #Basic Bot Commands
 UPDATE_COMMAND : ["update", "अपडेट"]
